--- a/projeto1/projeto1.csproj
+++ b/projeto1/projeto1.csproj
@@ -309,6 +309,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Act.cs" />
     <Compile Include="Assets\Scripts\BackgroundAnimation.cs" />
     <Compile Include="Assets\Scripts\brutus_behaviour.cs" />
     <Compile Include="Assets\Scripts\ChicoControls.cs" />
