--- a/projeto4/projeto4.csproj
+++ b/projeto4/projeto4.csproj
@@ -315,6 +315,7 @@
     <Compile Include="Assets\Scripts\brutus_behaviour.cs" />
     <Compile Include="Assets\Scripts\ChicoControls.cs" />
     <Compile Include="Assets\Scripts\DogBehaviourScript.cs" />
+    <Compile Include="Assets\Scripts\Invulnerability.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\obstacle.cs" />
     <Compile Include="Assets\Scripts\PoolManager.cs" />
